# routes/api/ingredients.js
@@ -4,7 +4,7 @@ const { ctrlWrapper } = require("../../helpers");
 const { authenticate } = require("../../middleware");
 const router = express.Router();
 
-router.get("/list", authenticate, ctrlWrapper(ctrl.getIngredientsList));
+router.get("/", authenticate, ctrlWrapper(ctrl.getIngredientsList));
 router.get("/:ingredientTtl", authenticate, ctrlWrapper(ctrl.getIngredients));
 
 module.exports = router;
